// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LRUStore .clear() should clear the store 1`] = `Array []`;

exports[`LRUStore .delete() should delete an item 1`] = `Array []`;

exports[`LRUStore .get() should return a Promise 1`] = `
Array [
  Object {
    "k": "existing",
    "v": "{\\"value\\":{\\"val\\":1},\\"options\\":{\\"createdAt\\":946684800000}}",
  },
]
`;

exports[`LRUStore .set() should set a value with ttl options 1`] = `
Array [
  Object {
    "k": "key",
    "v": "{\\"value\\":{\\"val\\":1},\\"options\\":{\\"createdAt\\":946684800000,\\"stale\\":5,\\"expire\\":10}}",
  },
]
`;
